fix: reinstate an empty test job

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,6 +9,17 @@ on:
       - '*'
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      # This seems to work faster than pulling during docker compose up
+      # - name: Pull images
+      #   run: docker compose pull --quiet
+      # - name: Bring up image image-server
+      #   run: docker compose up --wait
+      # - name: Test image-server
+      #   run: curl -fI http://localhost:8182/iiif/2/515698v2_fig1.tif/full/full/0/default.jpg
   build-and-push:
     runs-on: ubuntu-latest
     needs: [test]
